@@ -1,3 +1,10 @@
+2012-11-05  Benjamin Kosnik  <bkoz@redhat.com>
+            Oleg Smolsky  <oleg@smolsky.net>
+
+	PR libstdc++/55028
+	*  config/abi/pre/gnu-versioned-namespace.ver: Add symbols.
+	* testsuite/23_containers/unordered_multimap/insert/55028-debug.cc: New.
+
 2012-10-05  François Dumont  <fdumont@gcc.gnu.org>
 
 	* include/ext/throw_allocator.h (__throw_value_base): Add move
